Redesign dialogs + bug fixes

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -61,6 +61,7 @@
 		"EDIT": "Datensatz bearbeiten"
 	},
 	"DAY_ARCHIVED": "Archiviertes Protokoll",
+	"DAY_FAVORITE": "Bevorzugte Registrierung",
 	"DELETE": "Löschen",
 	"DELETE_CLASSROOM": "Klassenzimmer löschen",
 	"DELETE_ELEMENT": "Element löschen",
@@ -87,6 +88,7 @@
 		"UNEXPECTED_ERROR": "Ein unerwarteter Fehler ist aufgetreten. Bitte versuchen Sie es später noch einmal.",
 		"USER_NOT_FOUND": "Benutzer nicht gefunden"
 	},
+	"FAVORITE": "Favorit",
 	"FAVORITES": "Favoriten",
 	"FINALIZE": "Fertig stellen",
 	"FLAG_OF": "Flagge von",
@@ -108,6 +110,7 @@
 		},
 		"CUSTOM_DATES": "Benutzerdefiniertes Intervall",
 		"DATE": "Datum",
+		"DAY_EDITOR_PLACEHOLDER": "Klassennotizen mit Student",
 		"FATHERS_NAME": "Name des Vaters",
 		"GENDER": "Geschlecht",
 		"INSTRUMENT": "Instrument",
@@ -183,6 +186,7 @@
 	},
 	"LANGUAGE": "Sprache",
 	"MARKS": "Hinweise",
+	"MARK_FAVORITE": "Lesezeichen",
 	"MSG": {
 		"APP_UPDATED": "Die Anwendung wurde mit neuen Funktionen aktualisiert",
 		"APP_UPDATE_READY": "Ein Update wird vorbereitet. Laden Sie die Seite neu, um die Verbesserungen zu erhalten.",
@@ -199,7 +203,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Um einen neuen Datensatz zu erstellen, muss mindestens ein Schüler in Ihrer Schule eingeschrieben sein.",
 		"DAY_DELETE": "Möchten Sie diesen Datensatz wirklich löschen?",
 		"DAY_DELETE_OK": "Die Registrierung wurde erfolgreich gelöscht",
-		"DAY_LIST_EMPTY": "Es wird kein Datensatz erstellt. Sie können eine neue erstellen, indem Sie auf die große Schaltfläche unten klicken.",
+		"DAY_LIST_EMPTY": "In diesem Bereich sehen Sie die Liste der Datensätze Ihrer Schüler. Mit den Aufzeichnungen können Sie jeden Schüler täglich verfolgen. Um einen neuen zu erstellen, klicken Sie auf die Schaltfläche in der rechten unteren Ecke. Die, die wie ein Minz-Kaugummi wächst.",
 		"DAY_NOT_EXIST": "Dieser Datensatz existiert nicht",
 		"DAY_STUDENT_ARCHIVED": "Sie können keine Aufzeichnungen eines archivierten Schülers erstellen. Zuerst entladen",
 		"DAY_UNARCHIVE": "Sind Sie sicher, dass Sie diesen Datensatz unarchivieren wollen?",
@@ -217,16 +221,18 @@
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Noch kein Benutzer?",
 		"NO_MORE_DAYS": "Keine weiteren Datensätze",
+		"NO_MORE_STUDENTS": "Keine Studenten mehr",
 		"RELOAD_PAGE_FOR_CHANGES": "Laden Sie die Seite neu, damit die Änderungen wirksam werden",
 		"SERVICE_NOT_AVAILABLE": "Dieser Service wird in Kürze verfügbar sein",
 		"STUDENT_ARCHIVE": "Möchten Sie diesen Studenten wirklich archivieren?",
 		"STUDENT_ARCHIVED_OK": "Student erfolgreich abgelegt",
 		"STUDENT_ARCHIVE_2": "Wenn Sie dies tun, wird es nicht in den Schülerlisten angezeigt und Ihre Unterlagen werden ausgeblendet",
 		"STUDENT_CREATE_OK": "Ein neuer Schüler hat sich für den Unterricht angemeldet",
+		"STUDENT_DAY_LIST_EMPTY": "Diesem Schüler ist kein Datensatz zugeordnet. Sie können eine neue erstellen, indem Sie auf die Schaltfläche in der rechten unteren Ecke klicken. Der, der wie eine Avocado schlägt.",
 		"STUDENT_DELETE": "Möchten Sie diesen Schüler wirklich löschen?",
 		"STUDENT_DELETE_2": "Beachten Sie, dass die mit diesem Schüler verknüpften täglichen Aufzeichnungen ebenfalls gelöscht werden. Wenn Sie dies nicht möchten, denken Sie daran, dass Sie es jederzeit archivieren können",
 		"STUDENT_DELETE_OK": "Der Student wurde erfolgreich gelöscht",
-		"STUDENT_LIST_EMPTY": "Sie haben keine Schüler, die an Ihrer Schule eingeschrieben sind. Sie können es hinzufügen, indem Sie auf die große Schaltfläche unten klicken, die wie eine gebratene Kartoffel schlägt.",
+		"STUDENT_LIST_EMPTY": "In diesem Bereich sehen Sie die Liste der an Ihrer Schule eingeschriebenen Schüler. Sie haben noch keinen Schüler angelegt. Sie können dies tun, indem Sie auf die Schaltfläche in der rechten unteren Ecke klicken. Die, die wie ein Kartoffelchip pocht.",
 		"STUDENT_UNARCHIVE": "Möchten Sie diesen Studenten wirklich aus dem Archiv entfernen?",
 		"STUDENT_UNARCHIVED_OK": "Der Student wurde korrekt aus dem Archiv entfernt",
 		"STUDENT_UNARCHIVE_2": "Wenn Sie dies tun, werden die Schülerlisten erneut angezeigt und ihre Aufzeichnungen werden angezeigt. ",
