--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,6 +61,7 @@
 		"EDIT": "Edit record"
 	},
 	"DAY_ARCHIVED": "Archived record",
+	"DAY_FAVORITE": "Favorite registration",
 	"DELETE": "Delete",
 	"DELETE_CLASSROOM": "Delete classroom",
 	"DELETE_ELEMENT": "Delete Item",
@@ -87,6 +88,7 @@
 		"UNEXPECTED_ERROR": "An unexpected error occurred. Please try again later.",
 		"USER_NOT_FOUND": "User not found"
 	},
+	"FAVORITE": "Favorite",
 	"FAVORITES": "Favorites",
 	"FINALIZE": "Finalize",
 	"FLAG_OF": "Flag of",
@@ -108,6 +110,7 @@
 		},
 		"CUSTOM_DATES": "Custom interval",
 		"DATE": "Date",
+		"DAY_EDITOR_PLACEHOLDER": "Class notes with the student",
 		"FATHERS_NAME": "Father's name",
 		"GENDER": "Gender",
 		"INSTRUMENT": "Instrument",
@@ -183,6 +186,7 @@
 	},
 	"LANGUAGE": "Language",
 	"MARKS": "Notes",
+	"MARK_FAVORITE": "Mark favorite",
 	"MSG": {
 		"APP_UPDATED": "The application has been updated with new features",
 		"APP_UPDATE_READY": "An update is prepared. Reload the page to get the improvements.",
@@ -199,7 +203,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "To create a new record you need to have at least one student enrolled in your school.",
 		"DAY_DELETE": "Are you sure you want to delete this record?",
 		"DAY_DELETE_OK": "Registry has been deleted successfully",
-		"DAY_LIST_EMPTY": "No record is created. You can create a new one by clicking on the large button below.",
+		"DAY_LIST_EMPTY": "In this section you will see the list of your students' records. With the records you will be able to track each student on a daily basis. To create a new one click on the button in the lower right corner. The one that grows like a mint gum.",
 		"DAY_NOT_EXIST": "This record does not exist",
 		"DAY_STUDENT_ARCHIVED": "You cannot create records of an archived student. Unarchive it first",
 		"DAY_UNARCHIVE": "Are you sure you want to unarchive this record?",
@@ -217,16 +221,18 @@
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Not a user yet?",
 		"NO_MORE_DAYS": "No more records",
+		"NO_MORE_STUDENTS": "No more students",
 		"RELOAD_PAGE_FOR_CHANGES": "Reload the page for changes to take effect",
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
 		"STUDENT_ARCHIVED_OK": "Student archived correctly",
 		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
+		"STUDENT_DAY_LIST_EMPTY": "This student has no associated record. You can create a new one by clicking on the button in the lower right corner. The one that beats like an avocado.",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
 		"STUDENT_DELETE_2": "Note that the daily records associated with this student will also be deleted. If this is not what you want, remember that you can always archive it",
 		"STUDENT_DELETE_OK": "The student has been successfully deleted",
-		"STUDENT_LIST_EMPTY": "You don't have any students enrolled in your school. You can add it by clicking on the large button below that beats like a fried potato.",
+		"STUDENT_LIST_EMPTY": "In this section you will see the list of students enrolled in your school. You do not have any students created yet. You can do so by clicking on the button in the lower right corner. The one that throbs like a potato chip.",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
 		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed.",
