--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -60,7 +60,8 @@
 		"DUPLICATE": "Duplicar registro",
 		"EDIT": "Editar registro"
 	},
-	"DAY_ARCHIVED": "Registro archivado",
+	"DAY_ARCHIVED": "Archivado",
+	"DAY_FAVORITE": "Registro favorito",
 	"DELETE": "Borrar",
 	"DELETE_CLASSROOM": "Borrar aula",
 	"DELETE_ELEMENT": "Borrar elemento",
@@ -87,6 +88,7 @@
 		"UNEXPECTED_ERROR": "Ocurrió un error inesperado. Por favor, vuelva a intentarlo más tarde",
 		"USER_NOT_FOUND": "Usuario no encontrado"
 	},
+	"FAVORITE": "Favorito",
 	"FAVORITES": "Favoritos",
 	"FINALIZE": "Finalizar",
 	"FLAG_OF": "Bandera de ",
@@ -108,6 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervalo personalizado",
 		"DATE": "Fecha",
+		"DAY_EDITOR_PLACEHOLDER": "Notas de la clase con el alumno",
 		"FATHERS_NAME": "Nombre del padre",
 		"GENDER": "Género",
 		"INSTRUMENT": "Instrumento",
@@ -183,6 +186,7 @@
 	},
 	"LANGUAGE": "Idioma",
 	"MARKS": "Notas",
+	"MARK_FAVORITE": "Marcar favorito",
 	"MSG": {
 		"APP_UPDATED": "La aplicación se ha actualizado con nuevas características",
 		"APP_UPDATE_READY": "Hay preparada una actualización. Recarga la página para obtener las mejoras.",
@@ -199,7 +203,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Para crear un nuevo registro necesitas tener al menos un alumno inscrito en tu escuela",
 		"DAY_DELETE": "¿Estás seguro que quieres borrar este registro?",
 		"DAY_DELETE_OK": "Se ha borrado correctamente el registro",
-		"DAY_LIST_EMPTY": "No hay ningún registro creado. Puedes crear uno nuevo pulsando en el botón grande de abajo.",
+		"DAY_LIST_EMPTY": "En este apartado verás el listado de registros de tus alumnos. Con los registros podrás hacer un seguimiento diario de cada alumno. Para crear uno nuevo pulsa en el botón de la esquina inferior derecha. El que aumenta como un chicle de menta.",
 		"DAY_NOT_EXIST": "Este registro no existe",
 		"DAY_STUDENT_ARCHIVED": "No puedes crear registros de un alumno archivado. Desarchívalo primero",
 		"DAY_UNARCHIVE": "¿Estás seguro que quieres desarchivar este registro?",
@@ -217,16 +221,18 @@
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "¿Aún no eres usuario?",
 		"NO_MORE_DAYS": "No hay más registros",
+		"NO_MORE_STUDENTS": "No hay más alumnos",
 		"RELOAD_PAGE_FOR_CHANGES": "Recarga la página para que los cambios surtan efecto",
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
 		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
 		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
+		"STUDENT_DAY_LIST_EMPTY": "Este alumno no tiene ningún registro asociado. Puedes crear uno nuevo pulsando en el botón de la esquina inferior derecha. El que late como un aguacate.",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
 		"STUDENT_DELETE_2": "Ten en cuenta que los registros diarios asociados a este alumno también se borrarán. Si esto no es lo que quieres, recuerda que siempre puedes archivarlo",
 		"STUDENT_DELETE_OK": "Se ha borrado correctamente el alumno",
-		"STUDENT_LIST_EMPTY": "No tienes ningún alumno inscrito en tu escuela. Puedes añadirlo pulsando en el botón grande de abajo que palpita como una patata frita.",
+		"STUDENT_LIST_EMPTY": "En esa sección verás el listado de los alumnos inscritos en tu escuela. Aún no tienes ningún alumno creado. Puedes hacerlo pulsando en el botón de la esquina inferior derecha. El que palpita como una patata frita.",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
 		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros.",
