--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -61,6 +61,7 @@
 		"EDIT": "Modifier l'enregistrement"
 	},
 	"DAY_ARCHIVED": "Journal archivé",
+	"DAY_FAVORITE": "Enregistrement préféré",
 	"DELETE": "Supprimer",
 	"DELETE_CLASSROOM": "Supprimer la classe",
 	"DELETE_ELEMENT": "Supprimer l'élément",
@@ -87,6 +88,7 @@
 		"UNEXPECTED_ERROR": "Une erreur inattendue s'est produite. Veuillez réessayer plus tard.",
 		"USER_NOT_FOUND": "Utilisateur non trouvé"
 	},
+	"FAVORITE": "Favoris",
 	"FAVORITES": "Favoris",
 	"FINALIZE": "Terminer",
 	"FLAG_OF": "Drapeau de",
@@ -108,6 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervalle personnalisé",
 		"DATE": "Date",
+		"DAY_EDITOR_PLACEHOLDER": "Notes de cours avec l'élève",
 		"FATHERS_NAME": "Nom du père",
 		"GENDER": "Genre",
 		"INSTRUMENT": "Instrument",
@@ -183,6 +186,7 @@
 	},
 	"LANGUAGE": "Langage",
 	"MARKS": "Remarques",
+	"MARK_FAVORITE": "Bookmark",
 	"MSG": {
 		"APP_UPDATED": "L'application a été mise à jour avec de nouvelles fonctionnalités",
 		"APP_UPDATE_READY": "Une mise à jour est préparée. Rechargez la page pour obtenir les améliorations.",
@@ -199,7 +203,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Pour créer un nouvel enregistrement, vous devez avoir au moins un élève inscrit dans votre école.",
 		"DAY_DELETE": "Voulez-vous vraiment supprimer cet enregistrement?",
 		"DAY_DELETE_OK": "Le registre a été supprimé avec succès",
-		"DAY_LIST_EMPTY": "Aucun enregistrement n’est créé. Vous pouvez en créer un nouveau en cliquant sur le grand bouton ci-dessous.",
+		"DAY_LIST_EMPTY": "Dans cette section, vous verrez la liste des enregistrements de vos élèves. Grâce à ces dossiers, vous serez en mesure de suivre chaque élève sur une base quotidienne. Pour en créer un nouveau, cliquez sur le bouton dans le coin inférieur droit. Celui qui pousse comme un chewing-gum à la menthe.",
 		"DAY_NOT_EXIST": "Cet enregistrement n'existe pas",
 		"DAY_STUDENT_ARCHIVED": "Vous ne pouvez pas créer d'enregistrements d'un étudiant archivé. Déchargez-le d'abord",
 		"DAY_UNARCHIVE": "Êtes-vous sûr de vouloir désarchiver cet enregistrement ?",
@@ -217,16 +221,18 @@
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Pas encore utilisateur?",
 		"NO_MORE_DAYS": "Plus d'enregistrements",
+		"NO_MORE_STUDENTS": "Plus d'étudiants",
 		"RELOAD_PAGE_FOR_CHANGES": "Recharger la page pour que les modifications prennent effet",
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_ARCHIVE": "Voulez-vous vraiment archiver cet étudiant?",
 		"STUDENT_ARCHIVED_OK": "Élève déposé avec succès",
 		"STUDENT_ARCHIVE_2": "Si vous le faites, il n'apparaîtra pas dans les listes des étudiants et vos dossiers seront masqués.",
 		"STUDENT_CREATE_OK": "Un nouvel étudiant s'est inscrit en classe",
+		"STUDENT_DAY_LIST_EMPTY": "Cet élève n'a pas de dossier associé. Vous pouvez en créer un nouveau en cliquant sur le bouton dans le coin inférieur droit. Celui qui bat comme un avocat.",
 		"STUDENT_DELETE": "Voulez-vous vraiment supprimer cet étudiant?",
 		"STUDENT_DELETE_2": "Notez que les enregistrements quotidiens associés à cet élève seront également supprimés. Si ce n'est pas ce que vous voulez, n'oubliez pas que vous pouvez toujours l'archiver",
 		"STUDENT_DELETE_OK": "L'élève a été supprimé avec succès",
-		"STUDENT_LIST_EMPTY": "Vous n’avez pas d’élèves inscrits dans votre école. Vous pouvez l’ajouter en cliquant sur le grand bouton ci-dessous qui bat comme une pomme de terre frite.",
+		"STUDENT_LIST_EMPTY": "Dans cette section, vous verrez la liste des étudiants inscrits dans votre école. Vous n'avez pas encore créé d'étudiant. Vous pouvez le faire en cliquant sur le bouton dans le coin inférieur droit. Celle qui palpite comme une puce de pomme de terre.",
 		"STUDENT_UNARCHIVE": "Voulez-vous vraiment désarchiver cet élève?",
 		"STUDENT_UNARCHIVED_OK": "L'élève s'est désarchivé correctement",
 		"STUDENT_UNARCHIVE_2": "Cela réapparaîtra dans les listes des étudiants et leurs dossiers seront affichés.",
