--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -61,6 +61,7 @@
 		"EDIT": "Modifica record"
 	},
 	"DAY_ARCHIVED": "Registro archiviato",
+	"DAY_FAVORITE": "Registrazione preferita",
 	"DELETE": "Cancellare",
 	"DELETE_CLASSROOM": "Elimina classe",
 	"DELETE_ELEMENT": "Elimina elemento",
@@ -87,6 +88,7 @@
 		"UNEXPECTED_ERROR": "Si è verificato un errore imprevisto. Ti preghiamo di riprovare più tardi.",
 		"USER_NOT_FOUND": "Utente non trovato"
 	},
+	"FAVORITE": "preferiti",
 	"FAVORITES": "Favorito",
 	"FINALIZE": "Ultimare",
 	"FLAG_OF": "Bandiera di",
@@ -108,6 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervallo personalizzato",
 		"DATE": "Data",
+		"DAY_EDITOR_PLACEHOLDER": "Appunti di classe con lo studente",
 		"FATHERS_NAME": "Nome del padre",
 		"GENDER": "Genere",
 		"INSTRUMENT": "Strumento",
@@ -183,6 +186,7 @@
 	},
 	"LANGUAGE": "Lingua",
 	"MARKS": "Note",
+	"MARK_FAVORITE": "segnalibro",
 	"MSG": {
 		"APP_UPDATED": "L'applicazione è stata aggiornata con nuove funzionalità",
 		"APP_UPDATE_READY": "Viene preparato un aggiornamento. Ricarica la pagina per ottenere i miglioramenti.",
@@ -199,7 +203,7 @@
 		"DAY_CREATION_DISABLED_NO_STUDENTS": "Per creare un nuovo record devi avere almeno uno studente iscritto alla tua scuola.",
 		"DAY_DELETE": "Sei sicuro di voler eliminare questo record?",
 		"DAY_DELETE_OK": "Il registro è stato cancellato con successo",
-		"DAY_LIST_EMPTY": "Non viene creato alcun record. Puoi crearne uno nuovo cliccando sul grande pulsante qui sotto.",
+		"DAY_LIST_EMPTY": "In questa sezione vedrai la lista dei record dei tuoi studenti. Con i registri sarete in grado di tracciare ogni studente su base giornaliera. Per crearne uno nuovo, clicca sul pulsante in basso a destra. Quella che cresce come una gomma da masticare alla menta.",
 		"DAY_NOT_EXIST": "Questo record non esiste",
 		"DAY_STUDENT_ARCHIVED": "Non è possibile creare record di uno studente archiviato. Scaricalo prima",
 		"DAY_UNARCHIVE": "Sei sicuro di voler disarchiviare questo disco?",
@@ -217,16 +221,18 @@
 		"NOTHING_MAN": "¯\\_(ツ)_/¯",
 		"NO_ACCOUNT": "Non sei ancora un utente?",
 		"NO_MORE_DAYS": "Niente più registrazioni",
+		"NO_MORE_STUDENTS": "Niente più studenti",
 		"RELOAD_PAGE_FOR_CHANGES": "Ricarica la pagina per rendere effettive le modifiche",
 		"SERVICE_NOT_AVAILABLE": "Questo servizio sarà presto disponibile",
 		"STUDENT_ARCHIVE": "Sei sicuro di voler archiviare questo studente?",
 		"STUDENT_ARCHIVED_OK": "Studente archiviato correttamente",
 		"STUDENT_ARCHIVE_2": "In tal caso, non comparirà negli elenchi degli studenti e i tuoi record saranno nascosti.",
 		"STUDENT_CREATE_OK": "Un nuovo studente si è iscritto per la lezione",
+		"STUDENT_DAY_LIST_EMPTY": "Questo studente non ha alcun record associato. Puoi crearne uno nuovo cliccando sul pulsante in basso a destra. Quello che batte come un avocado.",
 		"STUDENT_DELETE": "Sei sicuro di voler eliminare questo studente?",
 		"STUDENT_DELETE_2": "Si noti che anche i record giornalieri associati a questo studente verranno eliminati. Se questo non è ciò che desideri, ricorda che puoi sempre archiviarlo",
 		"STUDENT_DELETE_OK": "Lo studente è stato cancellato con successo",
-		"STUDENT_LIST_EMPTY": "Non hai studenti iscritti alla tua scuola. Puoi aggiungerlo cliccando sul grande pulsante qui sotto che batte come una patata fritta.",
+		"STUDENT_LIST_EMPTY": "In questa sezione vedrai la lista degli studenti iscritti alla tua scuola. Non hai ancora creato nessuno studente. Puoi farlo cliccando sul pulsante in basso a destra. Quello che pulsa come una patatina.",
 		"STUDENT_UNARCHIVE": "Sei sicuro di voler annullare l'archiviazione di questo studente?",
 		"STUDENT_UNARCHIVED_OK": "Studente non archiviato correttamente",
 		"STUDENT_UNARCHIVE_2": "In questo modo riapparirà nelle liste degli studenti e verranno visualizzati i loro record.",
