--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -222,11 +222,11 @@
 		"NO_ACCOUNT": "Not a user yet?",
 		"NO_MORE_DAYS": "No more records",
 		"NO_MORE_STUDENTS": "No more students",
-		"RELOAD_PAGE_FOR_CHANGES": "Reload the page for changes to take effect",
+		"RELOAD_PAGE_FOR_CHANGES": "Reload the page for the changes to take effect",
 		"SERVICE_NOT_AVAILABLE": "This service will be available soon",
 		"STUDENT_ARCHIVE": "Are you sure you want to archive this student?",
 		"STUDENT_ARCHIVED_OK": "Student archived correctly",
-		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student listings and your records will be hidden",
+		"STUDENT_ARCHIVE_2": "If you do, it will not appear in the student list and their records will be hidden",
 		"STUDENT_CREATE_OK": "A new student has signed up for class",
 		"STUDENT_DAY_LIST_EMPTY": "This student has no associated record. You can create a new one by clicking on the button in the lower right corner. The one that beats like an avocado.",
 		"STUDENT_DELETE": "Are you sure you want to delete this student?",
@@ -235,7 +235,7 @@
 		"STUDENT_LIST_EMPTY": "In this section you will see the list of students enrolled in your school. You do not have any students created yet. You can do so by clicking on the button in the lower right corner. The one that throbs like a potato chip.",
 		"STUDENT_UNARCHIVE": "Are you sure you want to unarchive this student?",
 		"STUDENT_UNARCHIVED_OK": "Student unarchived correctly",
-		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student listings and their records will be displayed.",
+		"STUDENT_UNARCHIVE_2": "Doing so will reappear in student list and their records will be displayed.",
 		"STUDENT_UPDATE_OK": "The student has been modified",
 		"SUBJECT_CREATE_OK": "The subject has been created correctly",
 		"SUBJECT_DELETE": "Are you sure you want to delete this subject?",
