--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -222,11 +222,11 @@
 		"NO_ACCOUNT": "¿Aún no eres usuario?",
 		"NO_MORE_DAYS": "No hay más registros",
 		"NO_MORE_STUDENTS": "No hay más alumnos",
-		"RELOAD_PAGE_FOR_CHANGES": "Recarga la página para que los cambios surtan efecto",
+		"RELOAD_PAGE_FOR_CHANGES": "Recarga la página para que se apliquen los cambios",
 		"SERVICE_NOT_AVAILABLE": "Pronto estará disponible este servicio",
 		"STUDENT_ARCHIVE": "¿Estás seguro que quieres archivar este alumno?",
 		"STUDENT_ARCHIVED_OK": "Alumno archivado correctamente",
-		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en los listados de alumnos y se ocultarán sus registros",
+		"STUDENT_ARCHIVE_2": "Si lo hace no aparecerá en el listado de alumnos y se ocultarán sus registros",
 		"STUDENT_CREATE_OK": "Un nuevo alumno se ha apuntado a clase",
 		"STUDENT_DAY_LIST_EMPTY": "Este alumno no tiene ningún registro asociado. Puedes crear uno nuevo pulsando en el botón de la esquina inferior derecha. El que late como un aguacate.",
 		"STUDENT_DELETE": "¿Estás seguro que quieres borrar este alumno?",
@@ -235,7 +235,7 @@
 		"STUDENT_LIST_EMPTY": "En esa sección verás el listado de los alumnos inscritos en tu escuela. Aún no tienes ningún alumno creado. Puedes hacerlo pulsando en el botón de la esquina inferior derecha. El que palpita como una patata frita.",
 		"STUDENT_UNARCHIVE": "¿Estás seguro que quieres desarchivar este alumno?",
 		"STUDENT_UNARCHIVED_OK": "Alumno desarchivado correctamente",
-		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en los listados de alumnos y se mostrarán sus registros.",
+		"STUDENT_UNARCHIVE_2": "Si lo hace volverá a aparecer en el listado de alumnos y se mostrarán sus registros.",
 		"STUDENT_UPDATE_OK": "Se ha modificado el alumno",
 		"SUBJECT_CREATE_OK": "Se ha creado la asignatura correctamente",
 		"SUBJECT_DELETE": "¿Estás seguro que quieres borrar esta asignatura?",
