--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -222,7 +222,7 @@
 		"NO_ACCOUNT": "Pas encore utilisateur?",
 		"NO_MORE_DAYS": "Plus d'enregistrements",
 		"NO_MORE_STUDENTS": "Plus d'étudiants",
-		"RELOAD_PAGE_FOR_CHANGES": "Recharger la page pour que les modifications prennent effet",
+		"RELOAD_PAGE_FOR_CHANGES": "Rechargez la page pour que les modifications prennent effet",
 		"SERVICE_NOT_AVAILABLE": "Ce service sera bientôt disponible",
 		"STUDENT_ARCHIVE": "Voulez-vous vraiment archiver cet étudiant?",
 		"STUDENT_ARCHIVED_OK": "Élève déposé avec succès",
