--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -110,7 +110,7 @@
 		},
 		"CUSTOM_DATES": "Benutzerdefiniertes Intervall",
 		"DATE": "Datum",
-		"DAY_EDITOR_PLACEHOLDER": "Klassennotizen mit Student",
+		"DAY_EDITOR_PLACEHOLDER": "Schreiben Sie hier Ihre Notizen mit dem Schüler ...",
 		"FATHERS_NAME": "Name des Vaters",
 		"GENDER": "Geschlecht",
 		"INSTRUMENT": "Instrument",
