--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,7 +110,7 @@
 		},
 		"CUSTOM_DATES": "Custom interval",
 		"DATE": "Date",
-		"DAY_EDITOR_PLACEHOLDER": "Class notes with the student",
+		"DAY_EDITOR_PLACEHOLDER": "Write here your class notes with the student ...",
 		"FATHERS_NAME": "Father's name",
 		"GENDER": "Gender",
 		"INSTRUMENT": "Instrument",
