--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -110,7 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervalo personalizado",
 		"DATE": "Fecha",
-		"DAY_EDITOR_PLACEHOLDER": "Notas de la clase con el alumno",
+		"DAY_EDITOR_PLACEHOLDER": "Escribe aquí tus notas de la clase con el alumno...",
 		"FATHERS_NAME": "Nombre del padre",
 		"GENDER": "Género",
 		"INSTRUMENT": "Instrumento",
