--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -110,7 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervalle personnalisé",
 		"DATE": "Date",
-		"DAY_EDITOR_PLACEHOLDER": "Notes de cours avec l'élève",
+		"DAY_EDITOR_PLACEHOLDER": "Écrivez ici vos notes de cours avec l'élève ...",
 		"FATHERS_NAME": "Nom du père",
 		"GENDER": "Genre",
 		"INSTRUMENT": "Instrument",
