--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -110,7 +110,7 @@
 		},
 		"CUSTOM_DATES": "Intervallo personalizzato",
 		"DATE": "Data",
-		"DAY_EDITOR_PLACEHOLDER": "Appunti di classe con lo studente",
+		"DAY_EDITOR_PLACEHOLDER": "Scrivi qui i tuoi appunti di classe con lo studente ...",
 		"FATHERS_NAME": "Nome del padre",
 		"GENDER": "Genere",
 		"INSTRUMENT": "Strumento",
